//
// Created by student on 25.11.2019.
//

//#ifndef INC_07_ABSTRACT_FACTORY_PATTERN_WIDGET_H
//#define INC_07_ABSTRACT_FACTORY_PATTERN_WIDGET_H

//#endif //INC_07_ABSTRACT_FACTORY_PATTERN_WIDGET_H
#pragma once
#include <iostream>

class Widget{
public:
    virtual void draw() = 0;
};