//
// Created by student on 25.11.2019.
//

//#ifndef INC_07_ABSTRACT_FACTORY_PATTERN_WIDGETFACTORY_H
//#define INC_07_ABSTRACT_FACTORY_PATTERN_WIDGETFACTORY_H

//#endif //INC_07_ABSTRACT_FACTORY_PATTERN_WIDGETFACTORY_H
#pragma once
#include "Widget.h"
#include <iostream>
#include <memory>

class WidgetFactory{
public:
    virtual std::shared_ptr<Widget> create(std::string type) = 0;
};